--- a/release/1.0.4.md
+++ b/release/1.0.4.md
@@ -2,3 +2,17 @@
 # [rest-toolkit-core](https://github.com/NicheToolkit/rest-toolkit/tree/master/rest-toolkit-core)
 
 1、[RestField](https://github.com/NicheToolkit/rest-toolkit/blob/master/rest-toolkit-core/src/main/java/io/github/nichetoolkit/rest/RestField.java)的静态解析方法修复。
+
+
+# [rest-toolkit-utils](https://github.com/NicheToolkit/rest-toolkit/tree/master/rest-toolkit-utils)
+
+1、[RestAlgorithm](https://github.com/NicheToolkit/rest-toolkit/blob/master/rest-toolkit-utils/src/main/java/io/github/nichetoolkit/rest/worker/jwt/RestAlgorithm.java)的静态解析方法修复。
+
+2、[AlgorithmType](https://github.com/NicheToolkit/rest-toolkit/blob/master/rest-toolkit-utils/src/main/java/io/github/nichetoolkit/rest/worker/jwt/AlgorithmType.java)的静态解析方法修复。
+
+
+# [rest-toolkit-starter](https://github.com/NicheToolkit/rest-toolkit/tree/master/rest-toolkit-starter)
+
+1、[HttpClientType](https://github.com/NicheToolkit/rest-toolkit/blob/master/rest-toolkit-starter/src/main/java/io/github/nichetoolkit/rest/http/config/HttpClientType.java)的静态解析方法修复。
+
+2、[ProxyType](https://github.com/NicheToolkit/rest-toolkit/blob/master/rest-toolkit-starter/src/main/java/io/github/nichetoolkit/rest/http/config/ProxyType.java)的静态解析方法修复。
